addrspace/apps/lific/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lific
  namespace: lific
  labels:
    app.kubernetes.io/name: lific
    app.kubernetes.io/instance: lific
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3456
      targetPort: 3456
      protocol: TCP
  selector:
    app.kubernetes.io/name: lific
    app.kubernetes.io/instance: lific
